# adp-technical-test

./: README.md  available_conversations.csv  generate_report_assets.py  main.py  notebook.ipynb  predict.py  prepare_data.py  pyproject.toml  reporte_adp.md  requirements.txt  test_inference_manual.py  train.py
data/split/: test.csv  train.csv  val.csv
notebooks/: 01_eda_and_baseline_experiments.ipynb  distilbert_evaluation.ipynb
src/adp_technical_test/: __init__.py
