[project]
name = "adp-technical-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abraham Solórzano", email = "abdsp22@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.1.0",
    "datasets==2.18.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "pandas==2.2.1",
    "scikit-learn==1.4.1.post1",
    "seaborn>=0.13.2",
    "sentence-transformers==5.2.3",
    "torch>=2.4.0",
    "transformers>=4.41.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
